# efc

./: CMakeLists.txt  Kconfig
devices/BMP388/: BMP388.cpp
devices/BMP388/include/efc_devices/: BMP388.hpp
devices/HCSR04/: HCSR04.cpp
devices/HCSR04/include/efc_devices/: HCSR04.hpp
devices/LIS3MDLTR/: LIS3MDLTR.cpp
devices/LIS3MDLTR/include/efc_devices/: LIS3MDLTR.hpp
devices/TCS3472X/: TCS3472X.cpp
devices/TCS3472X/include/efc_devices/: TCS3472X.hpp
devices/lsm6dsowtr/: lsm6dsowtr.cpp
devices/lsm6dsowtr/include/efc_devices/: lsm6dsowtr.hpp  madgwick.hpp
devices/servo/include/efc_devices/: servo.hpp
efc_common/: common.cpp
efc_common/include/efc_common/: common.hpp
efc_drivers/adc/: adc.cpp
efc_drivers/adc/include/efc_drivers/: adc.hpp
efc_drivers/flash/: flash_controller.cpp
efc_drivers/flash/include/efc_drivers/: flash_controller.hpp
efc_drivers/gpio/: gpio.cpp
efc_drivers/gpio/include/efc_drivers/: gpio.hpp
efc_drivers/i2c/: i2c_controller.cpp
efc_drivers/i2c/include/efc_drivers/: i2c_controller.hpp  i2c_device.hpp
efc_drivers/pwm/: pwm_controller.cpp
efc_drivers/pwm/include/efc_drivers/: pwm_controller.hpp
efc_drivers/sd_mmc/: sd_mmc.cpp
efc_drivers/sd_mmc/include/efc_drivers/: sd_mmc.hpp
efc_drivers/uart/: uart_controller.cpp
efc_drivers/uart/include/efc_drivers/: uart_controller.hpp
